# diffusion2D

./: diffusion2d.py  pyproject.toml
diffusion2d/: __init__.py  diffusion2d.py
src/: output.py
