[project]
authors = [{name = "Claudius Haag", email = "claudius.haag@mib.uni-stuttgart.de"}]
dependencies = []
description = "This is a test for packaging!"
name = "diffusion2D"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
diffusion2d = { path = ".", editable = true }
build = "*"
twine = "*"

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = "*"
matplotlib = "*"