[project]
authors = [{name = "Claudius Haag", email = "claudius.haag@mib.uni-stuttgart.de"}]
dependencies = []
description = "This is a test for packaging!"
name = "diffusion2Dclaudius"
requires-python = ">= 3.11"
version = "0.1.0"

# [build-system]
# build-backend = "hatchling.build"
# requires = ["hatchling"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
diffusion2Dclaudius = { path = ".", editable = true }
# diffusion2Dclaudius = { url = "https://test.pypi.org/project/diffusion2Dclaudius/"}
pip = "*"
build = "*"
twine = "*"

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = "*"
matplotlib = "*"